name: filepath-alt
version: 0.1
synopsis: ByteString-based file and directory manipulation
license: MIT
license-file: license.txt
author: John Millikin <jmillikin@gmail.com>
maintainer: jmillikin@gmail.com
copyright: Copyright (c) John Millikin 2010
build-type: Simple
cabal-version: >=1.6
category: System
stability: experimental
homepage: http://ianen.org/haskell/filepath-alt/
bug-reports: mailto:jmillikin@gmail.com
tested-with: GHC==6.12.1

source-repository head
  type: darcs
  location: http://ianen.org/haskell/filepath-alt/

library
  ghc-options: -Wall -fno-warn-unused-do-bind -fno-warn-orphans

  build-depends:
      base >=3 && < 5
    , bytestring >= 0.9 && < 0.10
    , text >= 0.7 && < 0.8

  exposed-modules:
    System.FilePath
    System.FilePath.CurrentOS
    System.FilePath.Rules

  other-modules:
    System.FilePath.Internal
