cabal-version: 1.18
name: system-fileio
version: 0.3.16.6
license: MIT
license-file: license.txt
author: John Millikin <jmillikin@gmail.com>
maintainer: https://github.com/fpco/haskell-filesystem
build-type: Simple
category: System
stability: experimental
homepage: https://github.com/fpco/haskell-filesystem
bug-reports: https://github.com/fpco/haskell-filesystem/issues

synopsis: Consistent filesystem interaction across GHC versions (deprecated)
description: Consistent filesystem interaction across GHC versions (deprecated package).

extra-doc-files:
  README.md
  ChangeLog.md

extra-source-files:
  lib/hssystemfileio-unix.h
  lib/hssystemfileio-win32.h
  --
  tests/system-fileio-tests.cabal
  tests/FilesystemTests.hs
  tests/FilesystemTests/Posix.hs
  tests/FilesystemTests/Util.hs
  tests/FilesystemTests/Windows.hs

tested-with:
  GHC == 9.12.0
  GHC == 9.10.1
  GHC == 9.8.2
  GHC == 9.6.6
  GHC == 9.4.8
  GHC == 9.2.8
  GHC == 9.0.2
  GHC == 8.10.7
  GHC == 8.8.4
  GHC == 8.6.5
  GHC == 8.4.4
  GHC == 8.2.2
  GHC == 8.0.2

source-repository head
  type: git
  location: https://github.com/fpco/haskell-filesystem.git

library
  ghc-options: -Wall -O2
  hs-source-dirs: lib

  build-depends:
      base >= 4.0 && < 5
    , bytestring >= 0.9
    , system-filepath >= 0.3.1 && < 0.5
    , text >= 0.7.1
    , time >= 1.0 && < 2

  if os(windows)
    cpp-options: -DCABAL_OS_WINDOWS
    build-depends:
        Win32 >= 2.2
      , directory >= 1.0
    c-sources: lib/hssystemfileio-win32.c
  else
    build-depends:
        unix >= 2.3
    c-sources: lib/hssystemfileio-unix.c
    if impl(ghc >= 7.2.0) && impl(ghc < 7.4)
      cpp-options: -DSYSTEMFILEIO_LOCAL_OPEN_FILE

  exposed-modules:
    Filesystem

  default-language: Haskell2010

test-suite filesystem_tests
  type: exitcode-stdio-1.0
  main-is: FilesystemTests.hs

  ghc-options: -Wall -O2
  cc-options: -Wall
  hs-source-dirs: tests

  build-depends:
      base >= 4.0 && < 5
    , bytestring >= 0.9
    , chell >= 0.4 && < 0.6
    , system-fileio
    , system-filepath
    , temporary >= 1.1 && < 2
    , text
    , time >= 1.0 && < 2
    , transformers >= 0.2

  if os(windows)
    cpp-options: -DCABAL_OS_WINDOWS
  else
    build-depends:
        unix >= 2.3

  if os(darwin)
    cpp-options: -DCABAL_OS_DARWIN

  other-modules:
    FilesystemTests.Posix
    FilesystemTests.Util
    FilesystemTests.Windows

  default-language: Haskell2010
