name:                system-filepath
version:             0.5.0.0
license:             MIT
license-file:        LICENSE
author:              Tim Dysinger
maintainer:          tim@dysinger.net
category:            System
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:   Filesystem.Path
  -- other-modules:     Filesystem.Path.Windows
  --                    Filesystem.Path.Posix
  hs-source-dirs:    src
  default-language:  Haskell2010
  build-depends:     base >=4 && <5
                   , filepath
                   , text
