cabal-version: 2.0
name: system-filepath
version: 0.4.14.1
synopsis: High-level, byte-based file and directory path manipulations (deprecated)
description: High-level, byte-based file and directory path manipulations (deprecated).
license: MIT
license-file: license.txt
author: John Millikin <jmillikin@gmail.com>
maintainer: https://github.com/fpco/haskell-filesystem
copyright: John Millikin 2010-2012
build-type: Simple
category: System
stability: experimental
homepage: https://github.com/fpco/haskell-filesystem
bug-reports: https://github.com/fpco/haskell-filesystem/issues

extra-doc-files:
  README.md
  ChangeLog.md

tested-with:
  GHC == 9.12.0
  GHC == 9.10.1
  GHC == 9.8.2
  GHC == 9.6.6
  GHC == 9.4.8
  GHC == 9.2.8
  GHC == 9.0.2
  GHC == 8.10.7
  GHC == 8.8.4
  GHC == 8.6.5
  GHC == 8.4.4
  GHC == 8.2.2
  GHC == 8.0.2

source-repository head
  type: git
  location: https://github.com/fpco/haskell-filesystem.git

library
  ghc-options: -Wall -O2
  hs-source-dirs: lib

  build-depends:
      base >= 4.0 && < 5
    , bytestring >= 0.9
    , deepseq >= 1.1 && < 1.6
    , text >= 0.11.0.6
  if !impl(ghc >= 8.0)
    build-depends:
      semigroups >= 0.11 && < 0.19

  if os(windows)
    cpp-options: -DCABAL_OS_WINDOWS

  if os(darwin)
    cpp-options: -DCABAL_OS_DARWIN

  exposed-modules:
    Filesystem.Path
    Filesystem.Path.CurrentOS
    Filesystem.Path.Rules

  other-modules:
    Filesystem.Path.Internal

  default-language: Haskell2010

test-suite filesystem_path_tests
  type: exitcode-stdio-1.0
  main-is: FilesystemPathTests.hs

  ghc-options: -Wall -O2
  cc-options: -Wall
  hs-source-dirs: tests

  build-depends:
      base > 4.0 && < 5
    , bytestring
    , chell >= 0.4 && < 0.6
    , chell-quickcheck >= 0.2 && < 0.3
    , QuickCheck
    , system-filepath
    , text

  default-language: Haskell2010
