name: system-fileio-tests
version: 0
build-type: Simple
cabal-version: >= 1.6

flag coverage
  default: False
  manual: True

executable system-fileio_tests
  main-is: SystemFileioTests.hs
  ghc-options: -Wall
  hs-source-dirs: ../lib,.

  if flag(coverage)
    ghc-options: -fhpc

  build-depends:
      base >= 4.2 && < 5.0
    , bytestring >= 0.9 && < 0.10
    , chell >= 0.2 && < 0.3
    , directory >= 1.0 && < 1.2
    , system-filepath >= 0.3 && < 0.5
    , temporary >= 1.1 && < 2.0
    , text >= 0.1 && < 0.12
    , time >= 1.0 && < 1.5
    , transformers >= 0.2 && < 0.3

  if os(windows)
    cpp-options: -DCABAL_OS_WINDOWS
    build-depends: Win32 >= 2.2 && < 2.3
  else
    build-depends: unix >= 2.3 && < 2.6
