name: system-fileio-tests
version: 0
build-type: Simple
cabal-version: >= 1.6

flag coverage
  default: False
  manual: True

executable system-fileio_tests
  main-is: FilesystemTests.hs
  ghc-options: -Wall
  hs-source-dirs: ../lib,.

  if flag(coverage)
    ghc-options: -fhpc

  build-depends:
      base >= 4.0 && < 5.0
    , bytestring >= 0.9 && < 0.10
    , chell >= 0.2 && < 0.3
    , system-filepath >= 0.3 && < 0.5
    , temporary >= 1.1 && < 2.0
    , text >= 0.1
    , time >= 1.0 && < 1.5
    , transformers >= 0.2 && < 0.3

  if os(windows)
    cpp-options: -DCABAL_OS_WINDOWS

  if os(darwin)
    cpp-options: -DCABAL_OS_DARWIN

  if os(windows)
    build-depends:
        Win32 >= 2.2 && < 2.3
      , directory >= 1.0 && < 1.2
    c-sources: ../lib/hssystemfileio-win32.c
  else
    build-depends:
        unix >= 2.3 && < 2.6
    c-sources: ../lib/hssystemfileio-unix.c
    if impl(ghc >= 7.2.0) && impl(ghc < 7.4.0)
      cpp-options: -DSYSTEMFILEIO_LOCAL_OPEN_FILE
